# AHE_Whisper

./: .gitignore  AGENTS.md  AGENTS.md.back  CHANGELOG.md  CLAUDE.md  README.md  gui.py  prefetch_models.py  pyproject.toml  requirements.txt
.agent/: PLANS.md
ahe_whisper/: __init__.py  aligner.py  boundary_refiner.py  config.py  constants.py  diarizer.py  diarizer_backup.py  embedding.py  exporter.py  features.py  frontend_spec.py  gui_logic.py  logger.py  model_manager.py  pipeline.py  pipeline_backup.py  pipeline_worker.py  post_diar.py  punctuator_xlmroberta.py  utils.py  vad.py  vbx_resegment.py  word_grouper.py
data/: part.txt
data/gold/: kamigata_fixed_rewrite.txt  miyazaki_7m_rewrite.txt  wada_25m_rewrite.txt
tools/: analyze_boundary_snap.py  apply_pipeline_patch_v2.py  asr_recovery_patch.py  calibrate_ten_vs_silero.py  diag_boundary_snap_eval.py  diag_campplus_window_heatmap.py  diag_false_host_interval_report.py  diagnose_embeddings_v90.py  diagnose_output.py  diagnose_sherpa_from_segments_v90.py  diagnose_sherpa_speakers_v90.py  diagnose_silero_vs_tenvad.py  eres2netv2_config.yaml  eval_campplus_upper_bound.py  eval_diar_vs_manpower.py  eval_two_speaker_from_transcripts.py  manpowercheck.txt  run_pipeline_once.py
